--- a/project/css/port.css
+++ b/project/css/port.css
@@ -30,11 +30,12 @@ color: black;
 text-align: center;
 }
 .news .n1{
-  background: white;
-  border-radius: 20px;
-  border-color: 0px solid;
+  background:#f0f0ed;
+  border: .5px solid;
+  border-color:white;
   height: 420px;
   padding: 0px;
+  margin-right: -1px;
 }
 .upper p{
 font-family: 'Average', serif;
@@ -89,11 +90,11 @@ text-align: justify;
 .img_size img{
   width:300px;
   height:200px;
-  border-radius: 25px;
+
   border-color: 0px solid;
 }
 .lower .button {
-  background-color:#f0f0ed;
+  background-color:white;
   padding: 10px;
   width: 200px;
   height: 70px;
@@ -113,7 +114,7 @@ text-align: justify;
   display: inline;
 }
 .news{
-  background-color: #c1d3c2;
+  background-color: white;
 
 }
 
